# arna

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  arna.db-shm  arna.db-wal  docker-compose.yml
.cargo/: config.toml
.github/workflows/: backend.yml  console.yml  core.yml  release.yml  tauri.yml  website.yml
agent/: Cargo.toml  README.md
agent-desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
agent-desktop/src/: ChatApp.vue  ConsentApp.vue  main.ts  style.css
agent-desktop/src-tauri/: Cargo.toml  tauri.conf.json
agent-desktop/src-tauri/capabilities/: default.json
agent-desktop/src-tauri/icons/: icon.icns
agent-desktop/src-tauri/src/: lib.rs  main.rs
agent/examples/: bubble_poc.rs
agent/src/: bubble.rs  lib.rs  main.rs  winmon.rs
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  arna.db-shm  arna.db-wal
backend/src/: main.rs  store.rs
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  Root.tsx  index.css
client/src/components/: Avatar.tsx  CallOverlay.tsx  Chat.tsx  PageHeader.tsx  Sidebar.tsx  TitleBar.tsx
client/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Switch.tsx
client/src/lib/: api.ts  chat.ts  crypto.ts  mock.ts  webrtc.ts  ws.ts
client/src/views/: Auth.tsx  Dashboard.tsx  Friends.tsx  Messages.tsx  Notifications.tsx  Profile.tsx  Settings.tsx  Workspaces.tsx
console/: .dockerignore  .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  viewer.html  vite.config.ts  web.Dockerfile
console/src/: App.vue  BubbleConsentApp.vue  ChatApp.vue  ConsentApp.vue  PairApp.vue  main.ts  style.css
console/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
console/src-tauri/capabilities/: default.json
console/src-tauri/icons/: icon.icns
console/src-tauri/src/: lib.rs  main.rs
console/src/components/: Icon.vue  QrCode.vue
console/src/composables/: useAuth.ts  useRemote.ts
core/: Cargo.toml  README.md
core/src/: lib.rs  p2p.rs
docs/: APP-SHARING.md  ARCHITECTURE.md  PLAN.md  PROTOCOL.md  RELEASING.md  SECURITY.md  SPEC.md  STATUS.md
docs/adr/: 0001-product-scope.md  0002-primary-audience.md  0003-hardware-ownership-model.md  0004-workspace-identity-model.md  0005-platform-adapter-architecture.md  0006-windows-adapter-rendering-input.md  0007-specification-before-platform-integration.md  README.md
infra/: .env.example  Caddyfile  README.md  docker-compose.yml
infra/coturn/: turnserver.conf.example
infra/vps/: .env.example  README.md  docker-compose.yml
panel/: Cargo.toml
panel/src/: app.rs  main.rs  mock.rs  theme.rs  widgets.rs
poc/: Cargo.toml
poc/src/: main.rs
scripts/: README.md  backend-https.ps1  chat-check.mjs  client-https.ps1  download-check.mjs  file-check.mjs  serve.ps1  smoke-accounts.mjs  smoke-auth.mjs  smoke-code.mjs  smoke-consent.mjs  smoke-devices.mjs  video-check.mjs
services/: go.mod  go.sum  main.go  ws.go
website/: Dockerfile  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  page.tsx
xtask/: Cargo.toml
xtask/src/: main.rs
