# Workspace for the Arna apps/libraries.
# `backend` is excluded so it keeps building standalone in its own Docker image
# (its build context is just backend/). `console/src-tauri` is excluded because
# the Tauri CLI manages it as its own crate.
[workspace]
resolver = "2"
members = ["core", "poc", "agent"]
exclude = ["backend", "console/src-tauri"]
