[package]
name = "arna-agent"
version = "0.1.0"
edition = "2021"
description = "Arna agent: screen capture + WebRTC streaming + input injection (Phase 2)"
license = "LicenseRef-Proprietary"

[dependencies]
arna-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
scrap = "0.5"
image = { version = "0.25", default-features = false }
openh264 = "0.6"
enigo = "0.2"
serde_json = "1"
rand = "0.8"
