[package]
name = "arna-backend"
version = "0.1.0"
edition = "2021"
description = "Arna signaling + registry backend"
license = "LicenseRef-Proprietary"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
