[package]
name = "arna-core"
version = "0.1.0"
edition = "2021"
description = "Arna shared core: signaling client + WebRTC P2P"
license = "LicenseRef-Proprietary"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
webrtc = "0.11"
