[package]
name = "arna-poc"
version = "0.1.0"
edition = "2021"
description = "Arna signaling proof-of-concept CLI (Phase 1a)"
license = "LicenseRef-Proprietary"

[dependencies]
arna-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1"
