[package]
name = "arna-agent-desktop"
version = "0.1.0"
description = "Arna Agent — store-PC desktop app (tray + consent popup over the agent core)"
authors = ["mahiprime2001"]
license = "LicenseRef-Proprietary"
repository = "https://github.com/mahiprime2001/arna"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "arna_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
arna-agent = { path = "../../agent" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
rfd = "0.14"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
