[package]
name = "arna-console"
version = "0.1.0"
description = "Arna — remote desktop app (control others + be controlled, in one)"
authors = ["mahiprime2001"]
license = "LicenseRef-Proprietary"
repository = "https://github.com/mahiprime2001/arna"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arna_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
# The agent engine: this one app also runs the agent loop so the PC it's on can
# be controlled (screen/input/files/chat/clipboard/multi-monitor).
arna-agent = { path = "../../agent" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
rfd = "0.14"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
